tests/undefined/undefined.exp
Error ------------------------------------------------------------------------------------------------- undefined.js:2:9

Variable `x` [1] is never initialized, annotated, or assigned to. [invalid-declaration]

   2|     var x;
              ^ [1]


Error ------------------------------------------------------------------------------------------------- undefined.js:3:7

Cannot call `x.foo` because property `foo` is missing in uninitialized variable [1]. [incompatible-use]

   undefined.js:3:7
   3|     x.foo();
            ^^^

References:
   undefined.js:2:9
   2|     var x;
              ^ [1]


Error ----------------------------------------------------------------------------------------------- undefined.js:13:11

Cannot get `undefined['foo']` because undefined [1] does not have properties. [incompatible-use]

   undefined.js:13:11
   13| undefined['foo']; // Error
                 ^^^^^

References:
   undefined.js:13:1
   13| undefined['foo']; // Error
       ^^^^^^^^^ [1]


Error ------------------------------------------------------------------------------------------------ undefined2.js:3:9

Variable `id` [1] is never initialized, annotated, or assigned to. [invalid-declaration]

   3|     var id;
              ^^ [1]


Error ------------------------------------------------------------------------------------------------ undefined2.js:5:6

Cannot cast `name` to boolean because string [1] is incompatible with boolean [2]. [incompatible-cast]

   undefined2.js:5:6
   5|     (name: boolean); // error, string or void
           ^^^^

References:
   undefined2.js:4:21
   4|     var name = id ? 'John' : undefined;
                          ^^^^^^ [1]
   undefined2.js:5:12
   5|     (name: boolean); // error, string or void
                 ^^^^^^^ [2]


Error ------------------------------------------------------------------------------------------------ undefined2.js:5:6

Cannot cast `name` to boolean because undefined [1] is incompatible with boolean [2]. [incompatible-cast]

   undefined2.js:5:6
   5|     (name: boolean); // error, string or void
           ^^^^

References:
   undefined2.js:4:30
   4|     var name = id ? 'John' : undefined;
                                   ^^^^^^^^^ [1]
   undefined2.js:5:12
   5|     (name: boolean); // error, string or void
                 ^^^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- undefined2.js:11:6

Cannot cast `bar[x]` to boolean because undefined [1] is incompatible with boolean [2]. [incompatible-cast]

   undefined2.js:11:6
   11|     (bar[x]: boolean); // error, string or void
            ^^^^^^

References:
   undefined2.js:8:7
    8|       undefined,
             ^^^^^^^^^ [1]
   undefined2.js:11:14
   11|     (bar[x]: boolean); // error, string or void
                    ^^^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- undefined2.js:11:6

Cannot cast `bar[x]` to boolean because string [1] is incompatible with boolean [2]. [incompatible-cast]

   undefined2.js:11:6
   11|     (bar[x]: boolean); // error, string or void
            ^^^^^^

References:
   undefined2.js:9:7
    9|       'bar',
             ^^^^^ [1]
   undefined2.js:11:14
   11|     (bar[x]: boolean); // error, string or void
                    ^^^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- undefined2.js:20:7

Cannot get `x[0]` because an index signature declaring the expected key / value type is missing in `Number` [1].
[prop-missing]

   undefined2.js:20:7
   20|       x[0]; // should error, could be void
             ^^^^

References:
   undefined2.js:14:15
   14|   function(x: number) {
                     ^^^^^^ [1]


Error ----------------------------------------------------------------------------------------------- undefined2.js:27:6

Cannot cast `bar[x]` to boolean because string [1] is incompatible with boolean [2]. [incompatible-cast]

   undefined2.js:27:6
   27|     (bar[x]: boolean); // error, string only
            ^^^^^^

References:
   undefined2.js:24:7
   24|       undefined,
             ^^^^^^^^^ [1]
   undefined2.js:27:14
   27|     (bar[x]: boolean); // error, string only
                    ^^^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- undefined2.js:27:6

Cannot cast `bar[x]` to boolean because string [1] is incompatible with boolean [2]. [incompatible-cast]

   undefined2.js:27:6
   27|     (bar[x]: boolean); // error, string only
            ^^^^^^

References:
   undefined2.js:25:7
   25|       'bar',
             ^^^^^ [1]
   undefined2.js:27:14
   27|     (bar[x]: boolean); // error, string only
                    ^^^^^^^ [2]



Found 11 errors
